      \code{type = "quartz"}.

      \item There are several new built-in font mappings for
      \code{X11(type = "Xlib")}: see the help on \code{X11Fonts()}.

      \item There are experimental new types for \code{X11()}: see its
      help page.

      \item The special reference class fields \code{.self} and
      \code{.refClassDef} are now read-only to prevent corrupting
      the object. 
    }
  }

  \subsection{SWEAVE & VIGNETTES}{
    \itemize{
      \item Options \code{keep.source = TRUE, figs.only = FALSE}
      are now the default.

      \item The way the type of user-defined options is determined has
      changed.  Previously they were all regarded as logical: now the
      type is determined by the value given at first use.

      \item The allowed values of logical options are now precisely
      those allowed for character inputs to \code{as.logical()}: this
      means that \samp{t} and \samp{f} are no longer allowed (although
      \code{T} and \code{F} still are).

      \item The preferred location for vignette sources is now the
      directory \file{vignettes} and not \file{inst/doc}: \command{R CMD
      build} will now re-build vignettes in directory \file{vignettes}
      and copy the \file{.Rnw} (etc) files and the corresponding PDFs to
      \file{inst/doc}.

      \item \command{R CMD Sweave} now supports a \option{--driver}
      option to select the Sweave driver: the default is equivalent to
      \option{--driver=RweaveLatex}.

      \item \command{R CMD Sweave} and \command{R CMD Stangle} support
      \option{--encoding} and \option{--options} options.

      \item \code{Rtangle()} allows \code{output = "stdout"} or
      \code{output = "stderr"} to select the output or message
      connection.  This is convenient for scripting using something like
\preformatted{    R CMD Stangle --options='output="stdout"' foo.Rnw > foo2.R}

      \item There is a new option \code{pdf.compress} controlling